<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MediaPlayerActivity">

    <TextView
        android:id="@+id/now_playing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/now_playing"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/book_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/book_cover"
        android:src="@drawable/book1" />

    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/previous_btn"
            style="@style/MediaPlayerButtons"
            android:contentDescription="@string/previous_button"
            android:src="@drawable/ic_fast_rewind_96dp" />

        <ImageView
            android:id="@+id/play_btn"
            style="@style/MediaPlayerButtons"
            android:contentDescription="@string/play_button"
            android:src="@drawable/ic_play_arrow_96dp" />

        <ImageView
            android:id="@+id/next_btn"
            style="@style/MediaPlayerButtons"
            android:contentDescription="@string/next_button"
            android:src="@drawable/ic_fast_forward_96dp" />
    </LinearLayout>

    <Button
        android:id="@+id/library_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E4DEE4"
        android:text="@string/back_to_books_library"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</LinearLayout>