<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp">

    <ImageView
        android:id="@+id/book_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/book_cover"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/book_title_text_view"
        style="@style/TextTheme"
        android:text="@string/book_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/book_author_text_view"
        style="@style/TextTheme"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</LinearLayout>